--- a/package.json
+++ b/package.json
@@ -51,12 +51,15 @@
     "@dcloudio/uni-mp-xhs": "3.0.0-4020920240930001",
     "@dcloudio/uni-quickapp-webview": "3.0.0-4020920240930001",
     "axios": "^1.7.7",
+    "echarts": "^5.5.1",
     "pinia": "^2.2.6",
     "sass": "1.63.2",
     "sass-loader": "10.4.1",
+    "tslib": "^2.8.1",
     "uview-plus": "^3.3.43",
     "vue": "^3.4.21",
-    "vue-i18n": "^9.1.9"
+    "vue-i18n": "^9.1.9",
+    "zrender": "^5.6.0"
   },
   "devDependencies": {
     "@dcloudio/types": "^3.4.8",
